@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-26T00:49:19Z",
+  "timestamp" : "2023-11-26T08:11:26Z",
   "count_outdated" : 1478,
   "uniques_outdated" : 802,
-  "count" : 1502,
-  "uniques" : 817,
+  "count" : 1503,
+  "uniques" : 818,
   "clones" : [
     {
       "timestamp": "2023-11-18T00:00:00Z",
@@ -73,6 +73,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
