@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 25,
   "uniques": 8,
   "clones": [
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2023-11-25T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-26T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
