@@ -1,3 +1,12 @@
+2023-11-26T08:11:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6994349036 # 2118
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-26
+* notice: last 14d: unq all: 8 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 802 1478 / 817 1502
+* notice: next accum: outdated-unq outdated-all / unq all: 802 1478 / 818 1503
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-11-26]
+
 2023-11-26T00:49:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6992395134 # 2117
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-26
